	PR c++/28250 	* name-lookup.c (pushdecl_maybe_friend): Return early on 	error_mark_node. 	* except.c (expand_start_catch_block): Use error_mark_node instead 	of NULL_TREE for invalid decls. 	* parser.c (cp_parser_exception_declaration): Return error_mark_node 	on invalid catch parameter. Simplify.

* g++.dg/eh/catch1.C: New test.
	* g++.dg/eh/catch2.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115516 138bc75d-0d04-0410-961f-82ee72b054a4