gcc/testsuite/g++.dg/eh/catch1.C
@@ -1,0 +1,8 @@
+// PR c++/28250
+// { dg-do compile }
+
+template<int> void foo()
+{
+  try {}
+  catch (int(0)) {}  // { dg-error "before" }
+}
